# weather

./: .dockerignore  .env  .pre-commit-config.yaml  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt
apps/ai_service/: ml_main.py
apps/ai_service/api/endpoints/: ai.py
apps/weather_service/: main.py
apps/weather_service/api/endpoints/: weather.py
apps/weather_service/core/: config.py
apps/weather_service/db/: base.py  session.py
apps/weather_service/db/migrations/: env.py  script.py.mako
apps/weather_service/tests/: test_weather.py
libs/models/: weather_model.py
libs/utils/: api_client.py  env_loader.py  logger.py  ml_processor.py  weather_logic.py
